resolves #33 first dialog monitoring version
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/server/pom.xml
+++ b/bot/admin/server/pom.xml
@@ -33,6 +33,10 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-nlp-admin-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>bot-toolkit</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
