--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -23,14 +23,15 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.2",
+    "angular2-moment": "^1.3.3",
     "core-js": "^2.4.1",
     "file-saver": "^1.3.3",
     "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.2.1",
     "ngx-infinite-scroll": "^0.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-    "tock-nlp-admin": "file:${PWD}/../../../../nlp/admin/web"
+    "tock-nlp-admin": "file:${PWD}/../../../../nlp/admin/web",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.0.1",
