[maven-release-plugin] prepare release tock-0.2.0

--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,12 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.vsct.tock</groupId>
     <artifactId>tock-root</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2.0</version>
     <packaging>pom</packaging>
     <name>Tock</name>
     <description>Tock, The Open Conversation Kit</description>
@@ -393,7 +392,7 @@
             <name>Apache License, Version 2.0</name>
             <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
-            <comments/>
+            <comments />
         </license>
     </licenses>
 
@@ -401,7 +400,7 @@
         <connection>scm:git:git@github.com:voyages-sncf-technologies/tock.git</connection>
         <developerConnection>scm:git:git@github.com:voyages-sncf-technologies/tock.git</developerConnection>
         <url>git@github.com:voyages-sncf-technologies/tock.git</url>
-        <tag>HEAD</tag>
+        <tag>tock-0.2.0</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
