--- a/bot/admin/pom.xml
+++ b/bot/admin/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2.0</version>
     </parent>
 
     <artifactId>tock-bot-admin</artifactId>
