--- a/bot/admin/server/pom.xml
+++ b/bot/admin/server/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot-admin</artifactId>
-        <version>0.2.6</version>
+        <version>0.2.7-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-admin-server</artifactId>
