remove autologin for production
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "mavenbuild": "ng build --prod --aot"
+    "mavenbuild": "cp -f node_modules/tock-nlp-admin/src/environments/environment.prod.ts node_modules/tock-nlp-admin/src/environments/environment.ts && ng build --prod --aot"
   },
   "private": true,
   "dependencies": {
