--- a/nlp/model/service/pom.xml
+++ b/nlp/model/service/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-model</artifactId>
-        <version>0.2.7</version>
+        <version>0.2.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-model-service</artifactId>
