cleanup node_modules to avoid strange errors
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/pom.xml
+++ b/nlp/admin/web/pom.xml
@@ -84,6 +84,19 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>node_modules</directory>
+            </fileset>
+            <fileset>
+              <directory>dist</directory>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
