--- a/nlp/core/service/pom.xml
+++ b/nlp/core/service/pom.xml
@@ -37,6 +37,17 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-nlp-model-client</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
