resolves #15 Conversation replay UI for non-regression tests
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/pom.xml
+++ b/bot/admin/pom.xml
@@ -30,6 +30,7 @@
     <description>Root project for Tock Bot Admin</description>
 
     <modules>
+        <module>test</module>
         <module>server</module>
         <module>web</module>
     </modules>
