--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install: true
 branches:
   only:
   - master
-script: mvn package test -B
+script: mvn package test -B install
 cache:
   directories:
   - "$HOME/.m2/repository"
