enable travis install phase
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: java
 jdk:
 - oraclejdk8
-install: true
 branches:
   only:
   - master
-script: mvn package test -B install
+script: mvn test -B -Dskip.npm -Dassembly.skipAssembly=true
 cache:
   directories:
   - "$HOME/.m2/repository"
