[maven-release-plugin] prepare release tock-0.2.8

--- a/nlp/core/service/pom.xml
+++ b/nlp/core/service/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-core</artifactId>
-        <version>0.2.8-SNAPSHOT</version>
+        <version>0.2.8</version>
     </parent>
 
     <artifactId>tock-nlp-core-service</artifactId>
