--- a/nlp/model/storage-mongo/pom.xml
+++ b/nlp/model/storage-mongo/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-model</artifactId>
-        <version>0.2.8-SNAPSHOT</version>
+        <version>0.2.8</version>
     </parent>
 
     <artifactId>tock-nlp-model-storage-mongo</artifactId>
