--- a/bot/admin/test/xray/pom.xml
+++ b/bot/admin/test/xray/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot-admin-test</artifactId>
-        <version>0.2.9</version>
+        <version>0.2.10-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-admin-test-xray</artifactId>
