--- a/pom.xml
+++ b/pom.xml
@@ -31,33 +31,35 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.1.1</kotlin>
+        <kotlin>1.1.3</kotlin>
 
         <slf4j>1.7.25</slf4j>
         <logback>1.2.3</logback>
-        <kotlin-logging>1.4.1</kotlin-logging>
+        <kotlin-logging>1.4.5</kotlin-logging>
 
-        <kodein>3.2.0</kodein>
-        <kmongo>3.3.5</kmongo>
-        <fongo>2.0.6</fongo>
-        <jackson>2.8.7</jackson>
-        <vertx>3.4.1</vertx>
-        <retrofit>2.1.0</retrofit>
-        <okhttp>3.3.0</okhttp>
-        <guava>21.0</guava>
+        <kodein>4.0.0</kodein>
+        <kmongo>3.4.0</kmongo>
+        <fongo>2.1.0</fongo>
+        <jackson>2.8.9</jackson>
+        <vertx>3.4.2</vertx>
+        <retrofit>2.3.0</retrofit>
+        <okhttp>3.8.1</okhttp>
+        <guava>22.0</guava>
 
         <junit>4.12</junit>
-        <mockito-kotlin>1.4.0</mockito-kotlin>
+        <mockito-kotlin>1.5.0</mockito-kotlin>
 
-        <plugin.surefire>2.19.1</plugin.surefire>
+        <plugin.surefire>2.20</plugin.surefire>
         <plugin.source>3.0.1</plugin.source>
         <plugin.release>2.5.3</plugin.release>
         <plugin.gpg>1.6</plugin.gpg>
-        <plugin.nexus-staging>1.6.7</plugin.nexus-staging>
-        <plugin.dokka>0.9.13</plugin.dokka>
+        <plugin.nexus-staging>1.6.8</plugin.nexus-staging>
+        <plugin.dokka>0.9.14</plugin.dokka>
         <plugin.assembly>3.0.0</plugin.assembly>
         <plugin.frontend>1.4</plugin.frontend>
         <plugin.clean>3.0.0</plugin.clean>
+
+        <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
 
         <node>v6.10.2</node>
     </properties>
