[maven-release-plugin] prepare release tock-0.3.0

--- a/nlp/entity-evaluator/pom.xml
+++ b/nlp/entity-evaluator/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp</artifactId>
-        <version>0.2.10-SNAPSHOT</version>
+        <version>0.3.0</version>
     </parent>
 
     <artifactId>tock-nlp-entity-evaluator</artifactId>
