--- a/bot/engine-jackson/pom.xml
+++ b/bot/engine-jackson/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>0.2.10-SNAPSHOT</version>
+        <version>0.3.0</version>
     </parent>
 
     <artifactId>tock-bot-engine-jackson</artifactId>
