--- a/nlp/model/opennlp/pom.xml
+++ b/nlp/model/opennlp/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-model</artifactId>
-        <version>0.3.0</version>
+        <version>0.3.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-model-opennlp</artifactId>
