allows core nlp to use IntegrationTest
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/integration-tests/pom.xml
+++ b/nlp/integration-tests/pom.xml
@@ -36,13 +36,11 @@
             <scope>test</scope>
         </dependency>
 
-
         <dependency>
             <groupId>com.github.fakemongo</groupId>
             <artifactId>fongo</artifactId>
             <scope>test</scope>
         </dependency>
-
 
         <dependency>
             <groupId>fr.vsct.tock</groupId>
@@ -61,8 +59,22 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
