--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -19,7 +19,8 @@
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
-    "@angular/material": "^2.0.0-beta.2",
+    "@angular/material": "^2.0.0-beta.8",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.2",
