--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -14,13 +14,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.0",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.8",
-    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.2",
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "file-saver": "^1.3.3",
     "hammerjs": "^2.0.8",
+    "map.prototype.tojson": "^0.1.3",
     "ng2-file-upload": "^1.2.1",
     "ngx-infinite-scroll": "^0.4.1",
     "rxjs": "^5.1.0",
