--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.2",
+    "angular2-moment": "^1.3.3",
     "core-js": "^2.4.1",
     "file-saver": "^1.3.3",
     "hammerjs": "^2.0.8",
