--- a/nlp/admin/pom.xml
+++ b/nlp/admin/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>fr.vsct.tock</groupId>
     <artifactId>tock-nlp</artifactId>
-    <version>0.3.1</version>
+    <version>0.3.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>tock-nlp-admin</artifactId>
