fixes release post-crash
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.vsct.tock</groupId>
@@ -327,7 +328,7 @@
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <releaseProfiles>deploy</releaseProfiles>
                     <tagNameFormat>tock-@{project.version}</tagNameFormat>
-                    <goals>package dokka:javadocJar deploy</goals>
+                    <goals>site deploy</goals>
                 </configuration>
             </plugin>
             <plugin>
@@ -361,6 +362,7 @@
                 <version>${plugin.dokka}</version>
                 <executions>
                     <execution>
+                        <phase>pre-site</phase>
                         <goals>
                             <goal>dokka</goal>
                             <goal>javadoc</goal>
@@ -415,7 +417,7 @@
             <name>Apache License, Version 2.0</name>
             <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
-            <comments />
+            <comments/>
         </license>
     </licenses>
 
