setup release plugin correctly
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/pom.xml
+++ b/pom.xml
@@ -328,7 +328,7 @@
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <releaseProfiles>deploy</releaseProfiles>
                     <tagNameFormat>tock-@{project.version}</tagNameFormat>
-                    <goals>site deploy</goals>
+                    <goals>dokka:javadocJar deploy</goals>
                 </configuration>
             </plugin>
             <plugin>
