--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -40,6 +40,7 @@
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
+    "enhanced-resolve": "3.3.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
