--- a/nlp/core/shared/pom.xml
+++ b/nlp/core/shared/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-core</artifactId>
-        <version>0.3.2</version>
+        <version>0.3.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-core-shared</artifactId>
