--- a/bot/toolkit/pom.xml
+++ b/bot/toolkit/pom.xml
@@ -47,6 +47,10 @@
         </dependency>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-bot-connector-ga</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-bot-connector-rest</artifactId>
         </dependency>
         <dependency>
