resolves #70 i18n admin support
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/toolkit/pom.xml
+++ b/bot/toolkit/pom.xml
@@ -26,7 +26,7 @@
 
     <artifactId>bot-toolkit</artifactId>
     <name>Tock Bot Toolkit</name>
-    <description>Bot Tooklkit - to build chatbots with ease</description>
+    <description>Bot Toolkit - to build chatbots with ease</description>
 
     <dependencies>
         <dependency>
