--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -87,6 +87,11 @@
 
 
         <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-web</artifactId>
             <scope>provided</scope>
