--- a/bot/storage-mongo/pom.xml
+++ b/bot/storage-mongo/pom.xml
@@ -28,7 +28,6 @@
     <name>Tock NLP Bot Mongo</name>
     <description>Mongo storage implementation for Tock NLP Bot</description>
 
-
     <dependencies>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
@@ -37,6 +36,10 @@
         <dependency>
             <groupId>org.litote.kmongo</groupId>
             <artifactId>kmongo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
         </dependency>
 
         <dependency>
