introduces bot test toolkit
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -39,6 +39,7 @@
         <module>storage-mongo</module>
 
         <module>toolkit</module>
+        <module>test</module>
 
         <module>admin</module>
     </modules>
