--- a/bot/admin/test/pom.xml
+++ b/bot/admin/test/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot-admin</artifactId>
-        <version>0.3.3-SNAPSHOT</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>tock-bot-admin-test</artifactId>
