--- a/nlp/entity-evaluator/duckling/client/pom.xml
+++ b/nlp/entity-evaluator/duckling/client/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-duckling</artifactId>
-        <version>0.4.1</version>
+        <version>0.4.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-duckling-client</artifactId>
