resolves #94 move async support from connector controller to messenger connector
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/connector-messenger/pom.xml
+++ b/bot/connector-messenger/pom.xml
@@ -48,6 +48,10 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
