--- a/pom.xml
+++ b/pom.xml
@@ -31,16 +31,16 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.1.4-3</kotlin>
+        <kotlin>1.1.50</kotlin>
 
         <slf4j>1.7.25</slf4j>
         <logback>1.2.3</logback>
         <kotlin-logging>1.4.6</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>3.4.2</kmongo>
+        <kmongo>3.5.0</kmongo>
         <fongo>2.1.0</fongo>
-        <jackson>2.8.9</jackson>
+        <jackson>2.9.1</jackson>
         <vertx>3.4.2</vertx>
         <retrofit>2.3.0</retrofit>
         <okhttp>3.8.1</okhttp>
