--- a/translator/core/pom.xml
+++ b/translator/core/pom.xml
@@ -33,6 +33,10 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-shared</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
