resolves #122 google assistant: remove emojis from textToSpeech or ssml
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/connector-ga/pom.xml
+++ b/bot/connector-ga/pom.xml
@@ -38,6 +38,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kcthota</groupId>
+            <artifactId>emoji4j</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
