resolves #123 i18n: support specifying label by connector
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,12 @@
                 <groupId>com.kcthota</groupId>
                 <artifactId>emoji4j</artifactId>
                 <version>${emoji}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId> com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-core</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
