--- a/nlp/pom.xml
+++ b/nlp/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>0.6.4</version>
+        <version>0.6.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp</artifactId>
