--- a/translator/noop/pom.xml
+++ b/translator/noop/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-translator</artifactId>
-        <version>0.6.7</version>
+        <version>0.6.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-translator-noop</artifactId>
