resolves #151 xray: enhanced support for test creation
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/test/xray/pom.xml
+++ b/bot/admin/test/xray/pom.xml
@@ -37,6 +37,10 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-bot-engine-jackson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>klaxon</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
