bot: do not obfuscate test event
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -26,8 +26,8 @@
 
     <artifactId>tock-bot</artifactId>
     <packaging>pom</packaging>
-    <name>Tock NLP Bot</name>
-    <description>Root project for Tock NLP Bot</description>
+    <name>Tock Bot</name>
+    <description>Root project for Tock Bot</description>
 
     <modules>
         <module>engine</module>
